--- a/New folder/app/src/main/res/layout/activity_dashboard.xml
+++ b/New folder/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".schedule"
+    tools:context=".dashboard"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,14 +37,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Patient List"
+            android:text="categories"
             android:textSize="30dp"
             android:textAllCaps="true"
             android:padding="10dp"/>
-        <!--            android:fontFamily="@font/baloo"/>-->
+<!--            android:fontFamily="@font/baloo"/>-->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="190dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -58,15 +58,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="2dp"
+                    android:layout_alignParentRight="true"
                     android:padding="25dp"
-                    android:text="Alex kapoor , Age: 25"
-                    android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:text="@string/med"
+                    android:textSize="30sp" />
 
                 <Button
-                    android:id="@+id/h2"
+                    android:id="@+id/medcam"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -77,94 +75,22 @@
 
 
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/pills_removebg_preview" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="190dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:background="#7B1FA2">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="2dp"
-                    android:padding="25dp"
-                    android:text="Udham Singh , Age: 35"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/h1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:background="#00000000"
-                    android:padding="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/button"  />
-
-
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:background="#AFB42B">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="2dp"
-                    android:padding="25dp"
-                    android:text="Ram kapoor , Age: 25"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/h8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:background="#00000000"
-                    android:padding="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/button" />
-
-
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_margin="20dp"
                 android:background="#2B3467">
 
                 <TextView
@@ -173,29 +99,40 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginRight="2dp"
                     android:padding="25dp"
-                    android:text="Hamilton , Age: 45"
+                    android:text="@string/docreview"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="30sp" />
 
                 <Button
-                    android:id="@+id/h6"
+                    android:id="@+id/docreview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     android:background="#00000000"
                     android:padding="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/button"  />
+                    android:text="@string/button"
+                    android:textColor="@color/white" />
 
 
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="-75dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/doc_removebg_preview" />
         </RelativeLayout>
 
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="190dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -209,31 +146,36 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="2dp"
+                    android:layout_alignParentRight="true"
                     android:padding="25dp"
-                    android:text="Guddi devi , Age: 65"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:text="@string/disease"
+                    android:textSize="30sp" />
 
                 <Button
-                    android:id="@+id/h3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     android:background="#00000000"
                     android:padding="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/button"  />
+                    android:text="@string/button"
+                    android:textColor="@color/white" />
 
 
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/sick_removebg_preview" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="190dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -248,26 +190,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_marginRight="2dp"
+                    android:layout_alignParentRight="true"
                     android:padding="25dp"
-                    android:text="Shenaaz , Age: 26"
+                    android:text="@string/appointment"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="30sp" />
 
                 <Button
-                    android:id="@+id/h4"
+                    android:id="@+id/appointment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     android:background="#00000000"
                     android:padding="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/button"  />
+                    android:text="@string/button"
+                    android:textColor="@color/white" />
 
 
             </RelativeLayout>
 
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="-30dp"
+                android:src="@drawable/appt_removebg_preview"
+                android:layout_alignParentRight="true"/>
         </RelativeLayout>
 
     </LinearLayout>
